# Ejercisios-Universidad

Godot/pruebas/: character_body_2d.tscn  icon.svg.import  project.godot
Primer_anio/PYTHON/Problemas generales/: bh.py  data1.txt  redtfygyuhuiji.py
Primer_año/PYTHON/Problemas generales/: redtfygyuhuiji.py  soyuntexto.txt  usandoosytexto.py  yuhyhbj.py
Segundo_anio/Primer_semestre/Python/: hola.py
Segundo_anio/Primer_semestre/SQL Server Management Studio/: biblioteca.sql
Segundo_anio/SQL Server Management Studio/prueba/: practica.sql
Segundo_anio/Segundo_semestre/C#/: C#.sln
Segundo_anio/Segundo_semestre/QT_GUI/BancoEstado/: CMakeLists.txt  a.qrc  cliente.cpp  cliente.h  loginwindow.cpp  loginwindow.h  loginwindow.ui  main.cpp  persona.cpp  persona.h  recursos.qrc  ventanagestionclientes.cpp  ventanagestionclientes.h  ventanagestionclientes.ui  ventanahistorial.cpp  ventanahistorial.h  ventanahistorial.ui  ventanamenu.cpp  ventanamenu.h  ventanamenu.ui  ventanaoperacion.cpp  ventanaoperacion.h  ventanaoperacion.ui
Segundo_anio/Segundo_semestre/QT_GUI/BancoEstado/backend/: BANCO_CMM.cpp  GestorBD.cpp  GestorBD.h  main.cpp
Segundo_año/C/: anagrama.c  coding_C.c  ep3.c  ep4.c  ep6.c  fizzbuzz.c  version.c
Segundo_año/C/problemas_generales/: area_poligono.c  area_poligono_iregular.c  black_jack.c  codigo_morse.c  coding_C.c  decimal_binario.c  ejersicios datos simples.txt  empaques.c  factorial_recursivo.c  fibonacci.c  fizzbuzz.c  inverstr.c  invertir_int.c  invirtiendo_cadenas_diego.c  matrices.c  matrices2.c  prueb.c  pundos.c  punteros.c  ruleta.py  uspundef.c
Segundo_año/C/problemas_profesores/: conversor.c  ep15.c  ep2.c  ep6.c  ep8.c  ep9.c  num_mayor.c
Segundo_año/Primer_semestre/C/: resultado_multiplicacion.txt
Segundo_año/Primer_semestre/PowerShell/: Cadena_invertida.ps1  probando_powershell.ps1
Segundo_año/Primer_semestre/SQL Server Management Studio/: modelamiento1.sql
Segundo_año/SQL Server Management Studio/: SQLQuery1.sql  modelamiento1.sql  modelamiento2.sql
Segundo_año/SQL Server Management Studio/prueba/: U3_C1.sql
Segundo_año/SQL Server Management Studio/tarea_cb/: tareas.sql
Tercer_anio/BackEnd/: package.json
Tercer_anio/BackEnd/taskboard/: package.json  pnpm-workspace.yaml
Tercer_anio/C++/Criptografia/: AES_256.c  ECC.CPP  RSA.cpp  chacha.c  ej1.cpp  (+2 more)
Tercer_anio/Python/: limites1.py  limites2.py  limites3.py  limites4.py
(+479 files in other folders)
